<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollview_news_detail"
        android:layout_width="fill_parent"
        android:padding="10dip"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/txt_news_detail_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/title" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txt_news_detail_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/txt_news_detail_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="8sp"
                    android:text="@string/source" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_news_detail_body"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    
    <LinearLayout 
        android:id="@+id/layout_news_detail_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
         <Button
            android:id="@+id/btn_news_det_btm_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/order_bottom_left" />

        <EditText
            android:id="@+id/edit_news_det_btm_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/order_bottom_center"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_news_det_btm_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/order_botton_right"
            android:layout_weight="0.2"
            android:text="" />
        
    </LinearLayout>

</RelativeLayout>
